# dbus-cxx

./: CMakeLists.txt  conanfile.py
.github/workflows/: ci-windows.yml
compat/: CMakeLists.txt  fcntl.c  init.cpp  pipe2.c  unistd.h
dbus-cxx/: connection.cpp  dispatcher.cpp  headerlog.h  matchrule.cpp  matchrule.h  object.cpp  sendmsgtransport.cpp  signature.cpp  simplelogger.h  standalonedispatcher.cpp  transport.cpp  variantiterator.h
dbus-cxx-glib/: CMakeLists.txt
dbus-cxx-qt/: CMakeLists.txt
dbus-cxx-uv/: CMakeLists.txt  uvdispatcher.cpp
dbus-cxx-uv/unit-tests/: CMakeLists.txt  dbus-wrapper-uv-tests.bat  dbus-wrapper-uv-tests.sh  test-uv-dispatcher.cpp  uv-caller.cpp
unit-tests/: CMakeLists.txt  addressunescape-test.cpp  affinity-tests.cpp  datatests.cpp  dbus-wrapper-customaddress.bat  dbus-wrapper-customaddress.sh  dbus-wrapper-data-tests.bat  dbus-wrapper-fd-tests.bat  dbus-wrapper-introspection-tests.bat  dbus-wrapper-property-tests.bat  dbus-wrapper-recursive-signal.bat  dbus-wrapper-recursive.bat  dbus-wrapper.bat  filedescriptor-tests.cpp  introspection-test.cpp  messageiteratortests.cpp  pathclasstests.cpp  signaltests.cpp
